--- a/src/main/resources/component/IngredientQuantityTable.fxml
+++ b/src/main/resources/component/IngredientQuantityTable.fxml
@@ -10,10 +10,10 @@
         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
     </columnResizePolicy>
     <columns>
-        <TableColumn fx:id="quantityColumn" text="%cz.afrosoft.whattoeat.common.quantity"/>
-        <TableColumn fx:id="nameColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.name"/>
-        <TableColumn fx:id="priceColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.price"/>
+        <TableColumn fx:id="quantityColumn" text="%cz.afrosoft.whattoeat.common.quantity" minWidth="50" prefWidth="50"/>
+        <TableColumn fx:id="nameColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.name" minWidth="150"/>
+        <TableColumn fx:id="priceColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.price" minWidth="40" prefWidth="40"/>
         <TableColumn fx:id="nutritionFactsColumn" minWidth="25" maxWidth="25" resizable="false"/>
-        <TableColumn fx:id="keywordColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.keywords"/>
+        <TableColumn fx:id="keywordColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.keywords" minWidth="100"/>
     </columns>
 </fx:root>
