--- a/src/main/resources/fxml/RecipeList.fxml
+++ b/src/main/resources/fxml/RecipeList.fxml
@@ -52,15 +52,18 @@
     </left>
     <center>
         <TableView fx:id="recipeTable" styleClass="recipe-table">
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            </columnResizePolicy>
             <columns>
-                <TableColumn fx:id="nameColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.name"/>
-                <TableColumn fx:id="recipeTypeColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.recipeType"/>
-                <TableColumn fx:id="defaultServingWeightColumn" />
+                <TableColumn fx:id="nameColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.name" minWidth="200"/>
+                <TableColumn fx:id="recipeTypeColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.recipeType" minWidth="80" maxWidth="100"/>
+                <TableColumn fx:id="defaultServingWeightColumn" minWidth="25" maxWidth="25" />
                 <TableColumn fx:id="preparationTimeColumn"
-                             text="%cz.afrosoft.whattoeat.recipes.table.header.preparationTime"/>
-                <TableColumn fx:id="tasteColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.taste"/>
-                <TableColumn fx:id="ratingColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.rating"/>
-                <TableColumn fx:id="keywordColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.keywords"/>
+                             text="%cz.afrosoft.whattoeat.recipes.table.header.preparationTime" minWidth="100" maxWidth="100"/>
+                <TableColumn fx:id="tasteColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.taste" minWidth="60" maxWidth="60"/>
+                <TableColumn fx:id="ratingColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.rating" minWidth="70" maxWidth="70"/>
+                <TableColumn fx:id="keywordColumn" text="%cz.afrosoft.whattoeat.recipes.table.header.keywords" minWidth="200"/>
             </columns>
         </TableView>
     </center>
